# vip_ws_api_pipeline

./: .gitattributes  .gitignore  README.md  entrypoint.py  hello.py  pyproject.toml
assets/: assets.py  sample_asset.py
poc/: Iowa_dot_api_access  Minnessota_dot_api_access.py  Nebraska_dot_api_access.py  Wisconsin_dot_api_access.py  vip_dot_scraping.ipynb
poc/dagster/dagster_integration/: get_duckdb_data.py  mft_utils.py  vip_dagster_pipeline.py
poc/dagster/dagster_integration/scraping_pipelines/: Iowa_dot_api_access.py  Minnessota_dot_api_access.py  Nebraska_dot_api_access.py  Wisconsin_dot_api_access.py  de_scraping_pipeline.py  ga_scraping_pipeline.py  il_scraping_pipeline.py  la_scraping_pipeline.py  ny_scraping_pipeline.py  ok_scraping_pipeline.py  wa_scraping_pipeline.py  wv_scraping_pipeline.py
poc/prefect/dagster_integration/: vip_dagster_pipeline.py  wv_scraping_pipeline.py
poc/prefect/wv_pipeline_prefect/: get_duckdb_data.py  logging_config.py  mft_utils.py  wv_scraping_dagster.py  wv_scraping_pipeline.py
