[project]
name = "dagster-pipeline-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "dagster>=1.10.9",
    "dagster-pandas>=0.26.17",
    "duckdb>=1.2.2",
    "pandas>=2.2.3",
    "pyautogui>=0.9.54",
    "requests>=2.32.3",
    "selenium>=4.32.0",
    "tabula>=1.0.5",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "dagster-webserver>=1.10.9",
    "ipykernel>=6.29.5",
]
